# learning-rust

./: .gitignore  Cargo.toml  README.md
03_math_operations/src/: main.rs
04_control_flow/src/: main.rs
05_loops/src/: main.rs
06_user_input/src/: main.rs
07_guessing_game/src/: main.rs
08_unit_converter/src/: main.rs
09_atm_simulator/: Cargo.toml
09_atm_simulator/src/: main.rs
11_mars_survival/src/: main.rs
12_warehouse_manager/: Cargo.toml
12_warehouse_manager/src/: main.rs
13_crypto_trader/: Cargo.toml
13_crypto_trader/src/: main.rs
14_structs_and_enums/src/: main.rs
15_vectors_intro/: Cargo.toml
16_vectors_deep_dive/: Cargo.toml
16_vectors_deep_dive/src/: main.rs
17_personal_library/src/: main.rs
18_order_manager/src/: main.rs
19_rpg_inventory/: Cargo.toml
19_rpg_inventory/src/: main.rs
20_labyrinth/src/: main.rs
Level 1 – Fundamentals & Logic Building/14_structs_and_enums/: Cargo.toml
Level 1 – Fundamentals & Logic Building/17_personal_library/: Cargo.toml
Level 1 – Fundamentals & Logic Building/20_labyrinth/: README.md
Level 2 – Memory Safety & Systems Thinking/: README.md
Level 2 – Memory Safety & Systems Thinking/04_slices/: Cargo.toml
Level 2 – Memory Safety & Systems Thinking/05_structs/: Cargo.toml
Level 2 – Memory Safety & Systems Thinking/08_log_collector/: Cargo.toml
Level 2 – Memory Safety & Systems Thinking/10_student_registry/: Cargo.toml
Level_1/: README.md
Level_1/03_math_operations/: Cargo.toml
Level_1/10_dungeon_battle/: Cargo.toml
Level_2/: README.md
src/: main.rs
(+22 files in other folders)
